fixed alignment issues

--- a/style/style.scss
+++ b/style/style.scss
@@ -171,7 +171,7 @@ nav li a:hover {
     h1 {
         margin-top: 0;
         color: var(--heading-color);
-        font-size: 5em;
+        font-size: 4.4em;
         text-align: left;
         margin-bottom: 0;
     }
